--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     @@include('./main/header.html')
-    <p class="text">duudeeeee</p>
+    <p class="text"></p>
 
     <script src="js/app.min.js"></script>
   </body>
