--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-    @@include('./main/header.html')
-    <p class="text"></p>
-
+    <!-- connecting part of the code -->
+    @@include('./html/example.html')
+    <!-- the path to images begins with '@img/' -->
+    <img class="img" src="@img/gulp-2x.png" alt="" />
     <script src="js/app.min.js"></script>
   </body>
 </html>
